--- a/Know_Your_Neighbourhood_Task_1_AuthenticOrNot.ipynb
+++ b/Know_Your_Neighbourhood_Task_1_AuthenticOrNot.ipynb
@@ -6,7 +6,7 @@
       "name": "Know_Your_Neighbourhood",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMHkSkpk45JkjwknOE4M2y0",
+      "authorship_tag": "ABX9TyNV68oRBcwoV2mpbOBA7TYv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -662,14 +662,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 85
         },
-        "outputId": "3aa6abbc-a32e-4f2d-82e6-e3820fbadf67"
+        "outputId": "21ebe36e-7633-4edd-8980-fade6c0a8bdb"
       },
       "source": [
         "!pip install boilerpy3"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -692,7 +692,46 @@
       },
       "source": [
         "from boilerpy3 import extractors\n",
-        "import re"
+        "import re\n",
+        "try: \n",
+        "\tfrom googlesearch import search \n",
+        "except ImportError: \n",
+        "\tprint(\"No module named 'google' found\")"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cUqwkJLlG4H3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# to search \n",
+        "query = tweets[0].text\n",
+        "res = search(query, tld=\"com\", num=10, stop=3, pause=2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cwSZLgvPHfLM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "extractor = extractors.CanolaExtractor()\n",
+        "page_titles = []\n",
+        "page_contents = []\n",
+        "for url in res:\n",
+        "  #print(url)\n",
+        "  doc = extractor.get_doc_from_url(url)\n",
+        "  page_titles.append(doc.title)\n",
+        "  page_contents.append(doc.content)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -705,11 +744,11 @@
         "colab": {}
       },
       "source": [
-        "extractor = extractors.CanolaExtractor()\n",
+        "#extractor = extractors.CanolaExtractor()\n",
         "\n",
-        "doc = extractor.get_doc_from_url('https://indianexpress.com/article/cities/bangalore/bengaluru-loud-sound-police-hul-investigation-6419246/')\n",
-        "page_title = doc.title\n",
-        "page_contents = doc.content"
+        "#doc = extractor.get_doc_from_url('https://indianexpress.com/article/cities/bangalore/bengaluru-loud-sound-police-hul-investigation-6419246/')\n",
+        "#page_title = doc.title\n",
+        "#page_contents = doc.content"
       ],
       "execution_count": null,
       "outputs": []
@@ -723,7 +762,7 @@
       },
       "source": [
         "with open('indian_express_news.txt','a') as fp:\n",
-        "  fp.write(page_title)\n",
+        "  fp.write(page_titles)\n",
         "  fp.write('\\n\\n')\n",
         "  fp.write(page_contents)"
       ],
@@ -742,7 +781,7 @@
         "outputId": "0393bc75-5cc6-4f1e-8d58-0871036f7a12"
       },
       "source": [
-        "print(page_title)"
+        "print(page_titles)"
       ],
       "execution_count": null,
       "outputs": [
